Disable FFI specific code for compilation in JDK21
The changes disable all internal code specific to
FFI for the moment to pass the compilation due to
the modified public APIs in OpenJDK.

Note:
The modifications in code are based on the new APIs in JDK21 & JEP442
as mentioned at https://github.com/eclipse-openj9/openj9/issues/16951.

Signed-off-by: ChengJin01 <jincheng@ca.ibm.com>