@@ -1,4 +1,4 @@
-/*[INCLUDE-IF JAVA_SPEC_VERSION >= 19]*/
+/*[INCLUDE-IF JAVA_SPEC_VERSION == 20]*/
 /*******************************************************************************
  * Copyright IBM Corp. and others 2022
  *
@@ -24,13 +24,11 @@ package openj9.internal.foreign.abi;
 
 import java.util.HashMap;
 import java.util.List;
-/*[IF JAVA_SPEC_VERSION >= 17]*/
-/*[IF JAVA_SPEC_VERSION >= 18]*/
+/*[IF JAVA_SPEC_VERSION >= 20]*/
 import java.util.Objects;
-/*[ENDIF] JAVA_SPEC_VERSION >= 18 */
+/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.Set;
-/*[ENDIF] JAVA_SPEC_VERSION >= 17 */
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
@@ -42,60 +40,41 @@ import java.lang.invoke.WrongMethodTypeException;
 
 /*[IF JAVA_SPEC_VERSION >= 20]*/
 import java.lang.foreign.Arena;
-/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
-/*[IF JAVA_SPEC_VERSION >= 19]*/
-/*[IF JAVA_SPEC_VERSION == 19]*/
-import java.lang.foreign.Addressable;
-/*[ENDIF] JAVA_SPEC_VERSION == 19 */
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.GroupLayout;
-/*[IF JAVA_SPEC_VERSION == 19]*/
-import java.lang.foreign.MemoryAddress;
-/*[ENDIF] JAVA_SPEC_VERSION == 19 */
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-/*[IF JAVA_SPEC_VERSION == 19]*/
-import java.lang.foreign.MemorySession;
-/*[ENDIF] JAVA_SPEC_VERSION == 19 */
 import java.lang.foreign.SegmentAllocator;
-/*[IF JAVA_SPEC_VERSION >= 20]*/
+/*[IF JAVA_SPEC_VERSION == 20]*/
 import java.lang.foreign.SegmentScope;
-/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
-import java.lang.foreign.ValueLayout;
-/*[IF JAVA_SPEC_VERSION >= 20]*/
-import static java.lang.foreign.ValueLayout.*;
-/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
+/*[ENDIF] JAVA_SPEC_VERSION == 20 */
 import java.lang.foreign.VaList;
-/*[IF JAVA_SPEC_VERSION >= 20]*/
+import java.lang.foreign.ValueLayout;
 import jdk.internal.foreign.Utils;
 import jdk.internal.foreign.abi.LinkerOptions;
-/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 import jdk.internal.foreign.MemorySessionImpl;
-/*[ELSE] JAVA_SPEC_VERSION >= 19 */
+/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 import jdk.incubator.foreign.Addressable;
 import jdk.incubator.foreign.FunctionDescriptor;
 import jdk.incubator.foreign.GroupLayout;
 import jdk.incubator.foreign.MemoryAddress;
 import jdk.incubator.foreign.MemoryLayout;
 import jdk.incubator.foreign.MemorySegment;
-/*[IF JAVA_SPEC_VERSION == 18]*/
-import jdk.incubator.foreign.NativeSymbol;
-import jdk.incubator.foreign.VaList;
-/*[ENDIF] JAVA_SPEC_VERSION == 18 */
-/*[IF JAVA_SPEC_VERSION >= 17]*/
 import jdk.incubator.foreign.ResourceScope;
-/*[IF JAVA_SPEC_VERSION == 17]*/
 import jdk.incubator.foreign.ResourceScope.Handle;
-/*[ENDIF] JAVA_SPEC_VERSION == 17 */
 import jdk.incubator.foreign.SegmentAllocator;
-/*[ENDIF] JAVA_SPEC_VERSION >= 17 */
 import jdk.incubator.foreign.ValueLayout;
-/*[ENDIF] JAVA_SPEC_VERSION >= 19 */
+/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
+
+/*[IF JAVA_SPEC_VERSION >= 20]*/
+import static java.lang.foreign.ValueLayout.*;
+/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 
 /**
  * The internal implementation of downcall handler wraps up a method handle enabling
  * the native code to the ffi_call via the libffi interface at runtime.
  */
+@SuppressWarnings("nls")
 public class InternalDowncallHandler {
 
 	private final MethodType funcMethodType;
@@ -103,9 +82,6 @@ public class InternalDowncallHandler {
 	/*[IF JAVA_SPEC_VERSION >= 20]*/
 	private final LinkerOptions linkerOpts;
 	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
-	/*[IF JAVA_SPEC_VERSION == 16]*/
-	private Addressable functionAddr;
-	/*[ENDIF] JAVA_SPEC_VERSION == 16 */
 	private long cifNativeThunkAddr;
 	private long argTypesAddr;
 	private MemoryLayout[] argLayoutArray;
@@ -117,9 +93,7 @@ public class InternalDowncallHandler {
 	 */
 	/*[IF JAVA_SPEC_VERSION >= 20]*/
 	private Set<SegmentScope> memArgScopeSet;
-	/*[ELSEIF JAVA_SPEC_VERSION == 19]*/
-	private Set<MemorySession> memArgScopeSet;
-	/*[ELSE] JAVA_SPEC_VERSION == 19 */
+	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 	private Set<ResourceScope> memArgScopeSet;
 	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 
@@ -181,28 +155,28 @@ public class InternalDowncallHandler {
 	static {
 		try {
 			/* Set up the argument filters for the primitive types and MemoryAddress. */
-			booleanToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "booleanToLongArg", methodType(long.class, boolean.class)); //$NON-NLS-1$
-			charToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "charToLongArg", methodType(long.class, char.class)); //$NON-NLS-1$
-			byteToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "byteToLongArg", methodType(long.class, byte.class)); //$NON-NLS-1$
-			shortToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "shortToLongArg", methodType(long.class, short.class)); //$NON-NLS-1$
-			intToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "intToLongArg", methodType(long.class, int.class)); //$NON-NLS-1$
-			floatToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "floatToLongArg", methodType(long.class, float.class)); //$NON-NLS-1$
-			doubleToLongArgFilter = lookup.findStatic(Double.class, "doubleToLongBits", methodType(long.class, double.class)); //$NON-NLS-1$
+			booleanToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "booleanToLongArg", methodType(long.class, boolean.class));
+			charToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "charToLongArg", methodType(long.class, char.class));
+			byteToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "byteToLongArg", methodType(long.class, byte.class));
+			shortToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "shortToLongArg", methodType(long.class, short.class));
+			intToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "intToLongArg", methodType(long.class, int.class));
+			floatToLongArgFilter = lookup.findStatic(InternalDowncallHandler.class, "floatToLongArg", methodType(long.class, float.class));
+			doubleToLongArgFilter = lookup.findStatic(Double.class, "doubleToLongBits", methodType(long.class, double.class));
 
 			/* Set up the return value filters for the primitive types and MemoryAddress. */
-			longObjToVoidRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToVoidRet", methodType(void.class, Object.class)); //$NON-NLS-1$
-			longObjToBooleanRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToBooleanRet", methodType(boolean.class, Object.class)); //$NON-NLS-1$
-			longObjToCharRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToCharRet", methodType(char.class, Object.class)); //$NON-NLS-1$
-			longObjToByteRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToByteRet", methodType(byte.class, Object.class)); //$NON-NLS-1$
-			longObjToShortRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToShortRet", methodType(short.class, Object.class)); //$NON-NLS-1$
-			longObjToIntRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToIntRet", methodType(int.class, Object.class)); //$NON-NLS-1$
-			longObjToLongRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToLongRet", methodType(long.class, Object.class)); //$NON-NLS-1$
-			longObjToFloatRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToFloatRet", methodType(float.class, Object.class)); //$NON-NLS-1$
-			longObjToDoubleRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToDoubleRet", methodType(double.class, Object.class)); //$NON-NLS-1$
-			/*[IF JAVA_SPEC_VERSION <= 19]*/
-			longObjToMemAddrRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToMemAddrRet", methodType(MemoryAddress.class, Object.class)); //$NON-NLS-1$
-			/*[ENDIF] JAVA_SPEC_VERSION <= 19 */
-			objToMemSegmtRetFilter = lookup.findStatic(InternalDowncallHandler.class, "objToMemSegmtRet", methodType(MemorySegment.class, Object.class)); //$NON-NLS-1$
+			longObjToVoidRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToVoidRet", methodType(void.class, Object.class));
+			longObjToBooleanRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToBooleanRet", methodType(boolean.class, Object.class));
+			longObjToCharRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToCharRet", methodType(char.class, Object.class));
+			longObjToByteRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToByteRet", methodType(byte.class, Object.class));
+			longObjToShortRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToShortRet", methodType(short.class, Object.class));
+			longObjToIntRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToIntRet", methodType(int.class, Object.class));
+			longObjToLongRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToLongRet", methodType(long.class, Object.class));
+			longObjToFloatRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToFloatRet", methodType(float.class, Object.class));
+			longObjToDoubleRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToDoubleRet", methodType(double.class, Object.class));
+			/*[IF JAVA_SPEC_VERSION == 17]*/
+			longObjToMemAddrRetFilter = lookup.findStatic(InternalDowncallHandler.class, "longObjToMemAddrRet", methodType(MemoryAddress.class, Object.class));
+			/*[ENDIF] JAVA_SPEC_VERSION == 17 */
+			objToMemSegmtRetFilter = lookup.findStatic(InternalDowncallHandler.class, "objToMemSegmtRet", methodType(MemorySegment.class, Object.class));
 		} catch (IllegalAccessException | NoSuchMethodException e) {
 			throw new InternalError(e);
 		}
@@ -251,15 +225,12 @@ public class InternalDowncallHandler {
 		return Float.floatToIntBits(argValue);
 	}
 
-	/*[IF JAVA_SPEC_VERSION >= 17]*/
 	/* Save the active session of the specified passed-in memory specific argument in the downcall handler
 	 * given the argument might be created within different sessions/scopes.
 	 */
 	/*[IF JAVA_SPEC_VERSION >= 20]*/
 	private final void addMemArgScope(SegmentScope memArgScope) throws IllegalStateException
-	/*[ELSEIF JAVA_SPEC_VERSION == 19]*/
-	private final void addMemArgScope(MemorySession memArgScope) throws IllegalStateException
-	/*[ELSE] JAVA_SPEC_VERSION == 19 */
+	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 	private final void addMemArgScope(ResourceScope memArgScope) throws IllegalStateException
 	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 	{
@@ -272,23 +243,16 @@ public class InternalDowncallHandler {
 	/* Validate the memory related scope to ensure that it is kept alive during the downcall. */
 	/*[IF JAVA_SPEC_VERSION >= 20]*/
 	private void validateMemScope(SegmentScope memScope) throws IllegalStateException
-	/*[ELSEIF JAVA_SPEC_VERSION == 19]*/
-	private void validateMemScope(MemorySession memScope) throws IllegalStateException
-	/*[ELSE] JAVA_SPEC_VERSION == 19 */
+	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 	private void validateMemScope(ResourceScope memScope) throws IllegalStateException
 	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 	{
 		if (!memScope.isAlive())
 		{
-			/*[IF JAVA_SPEC_VERSION == 19]*/
-			String scopeName = "session";
-			/*[ELSE] JAVA_SPEC_VERSION == 19 */
 			String scopeName = "scope";
-			/*[ENDIF] JAVA_SPEC_VERSION == 19 */
-			throw new IllegalStateException("Already closed: attempted to access the memory value in a closed " + scopeName);  //$NON-NLS-1$
+			throw new IllegalStateException("Already closed: attempted to access the memory value in a closed " + scopeName);
 		}
 	}
-	/*[ENDIF] JAVA_SPEC_VERSION >= 17 */
 
 	/*[IF JAVA_SPEC_VERSION >= 20]*/
 	/* Intended for memSegmtOfPtrToLongArgFilter that converts the memory segment
@@ -298,67 +262,17 @@ public class InternalDowncallHandler {
 		addMemArgScope(argValue.scope());
 		return UpcallMHMetaData.getNativeArgRetSegmentOfPtr(argValue);
 	}
-	/*[ELSEIF JAVA_SPEC_VERSION >= 18] */
-	/* Intended for memAddrToLongArgFilter that converts the memory address to long.
-	 * Note: the passed-in argument can be an instance of MemoryAddress, MemorySegment
-	 * or VaList which extends Addressable in OpenJDK since Java 18 featured with
-	 * JEP419 (Second Incubator).
-	 */
-	private final long memAddrToLongArg(Addressable argValue) throws IllegalStateException {
-		/* Only check MemorySegment and VaList given MemoryAddress.scope() doesn't exist in JDK17. */
-		if (argValue instanceof MemorySegment value) {
-			/*[IF JAVA_SPEC_VERSION == 19]*/
-			addMemArgScope(value.session());
-			/*[ELSE] JAVA_SPEC_VERSION == 19 */
-			addMemArgScope(value.scope());
-			/*[ENDIF] JAVA_SPEC_VERSION == 19 */
-		} else if (argValue instanceof VaList value) {
-			/*[IF JAVA_SPEC_VERSION == 19]*/
-			addMemArgScope(value.session());
-			/*[ELSE] JAVA_SPEC_VERSION == 19 */
-			addMemArgScope(value.scope());
-			/*[ENDIF] JAVA_SPEC_VERSION == 19 */
-		}
-		/*[IF JAVA_SPEC_VERSION == 18]*/
-		else if (argValue instanceof NativeSymbol value) {
-			addMemArgScope(value.scope());
-		}
-		/*[ENDIF] JAVA_SPEC_VERSION == 18 */
-
-		/* Instead of assigning nativeAddr with argValue.address().toRawLongValue() by fefault,
-		 * (which triggers the exception in the case of the on-heap segment in JDK19), the
-		 * argument is validated at first in the case of MemorySegment/MemoryAddress.
-		 */
-		long nativeAddr = 0;
-		if (argValue instanceof MemorySegment value) {
-			nativeAddr = UpcallMHMetaData.getNativeArgRetSegmentOfPtr(value);
-		} else if (argValue instanceof MemoryAddress value) {
-			nativeAddr = UpcallMHMetaData.getNativeArgRetAddrOfPtr(value);
-		} else {
-			nativeAddr = argValue.address().toRawLongValue();
-		}
-		return nativeAddr;
-	}
-	/*[ELSEIF JAVA_SPEC_VERSION == 17]*/
+	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 	/* Intended for memAddrToLongArgFilter that converts the memory address to long. */
 	private final long memAddrToLongArg(MemoryAddress argValue) throws IllegalStateException {
 		addMemArgScope(argValue.scope());
 		return UpcallMHMetaData.getNativeArgRetAddrOfPtr(argValue);
 	}
-	/*[ELSE] JAVA_SPEC_VERSION == 17 */
-	/* Intended for memAddrToLongArgFilter that converts the memory address to long. */
-	private static final long memAddrToLongArg(MemoryAddress argValue) {
-		return argValue.address().toRawLongValue();
-	}
 	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 
 	/* Intended for memSegmtToLongArgFilter that converts the memory segment to long. */
 	private final long memSegmtToLongArg(MemorySegment argValue) throws IllegalStateException {
-		/*[IF JAVA_SPEC_VERSION == 19]*/
-		addMemArgScope(argValue.session());
-		/*[ELSE] JAVA_SPEC_VERSION == 19 */
 		addMemArgScope(argValue.scope());
-		/*[ENDIF] JAVA_SPEC_VERSION == 19 */
 		return UpcallMHMetaData.getNativeArgRetSegment(argValue);
 	}
 
@@ -448,7 +362,7 @@ public class InternalDowncallHandler {
 	 * @param options The linker options indicating additional linking requirements to the linker
 	 */
 	public InternalDowncallHandler(MethodType functionMethodType, FunctionDescriptor functionDescriptor, LinkerOptions options)
-	/*[ELSEIF JAVA_SPEC_VERSION >= 17]*/
+	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 	/**
 	 * The internal constructor is responsible for mapping the preprocessed layouts
 	 * of return type & argument types to the underlying prep_cif in native.
@@ -457,23 +371,13 @@ public class InternalDowncallHandler {
 	 * @param funcDesc The function descriptor of the specified native function
 	 */
 	public InternalDowncallHandler(MethodType functionMethodType, FunctionDescriptor functionDescriptor)
-	/*[ELSE] JAVA_SPEC_VERSION >= 17 */
-	/**
-	 * The internal constructor is responsible for mapping the preprocessed layouts
-	 * of return type & argument types to the underlying prep_cif in native.
-	 *
-	 * @param downcallAddr The downcall symbol
-	 * @param functionMethodType The MethodType of the specified native function
-	 * @param funcDesc The function descriptor of the specified native function
-	 */
-	public InternalDowncallHandler(Addressable downcallAddr, MethodType functionMethodType, FunctionDescriptor functionDescriptor)
 	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 	{
 		realReturnLayout = functionDescriptor.returnLayout().orElse(null); // set to null for void
 		List<MemoryLayout> argLayouts = functionDescriptor.argumentLayouts();
 		argLayoutArray = argLayouts.toArray(new MemoryLayout[argLayouts.size()]);
 
-		/*[IF JAVA_SPEC_VERSION <= 17]*/
+		/*[IF JAVA_SPEC_VERSION == 17]*/
 		/* The layout check against the method type is still required for Java 16 & 17 in that
 		 * both the function descriptor and the method type are passed in as arguments by users.
 		 * Note: skip the validity check on function descriptor in Java 18 as it is done before
@@ -482,20 +386,7 @@ public class InternalDowncallHandler {
 		 * check the layout against the method type.
 		 */
 		TypeLayoutCheckHelper.checkIfValidLayoutAndType(functionMethodType, argLayoutArray, realReturnLayout);
-
-		/*[IF JAVA_SPEC_VERSION == 16]*/
-		/* 1) The native function address has been removed from the parameter lists of downcallHandle() APIs
-		 * since JDK17 so as to being passed in as the first argument when invoking the returned downcall handle
-		 * or bound as the first argument via MethodHandles.insertArguments() beforehand in OpenJDK.
-		/* 2) As explained in the Spec of LibraryLookup in JDK16, the downcall must hold a strong reference to
-		 * the native library symbol to prevent the underlying native library from being unloaded during the
-		 * native calls, which is no longer required since JDK17 as the symbol intende for for the current thread
-		 * is directly passed to the native invocation so as to fit in the multithreading environment.
-		 * Note: the passed-in addressable parameter can be either LibraryLookup.Symbol or MemoryAddress.
-		 */
-		functionAddr = downcallAddr;
-		/*[ENDIF] JAVA_SPEC_VERSION == 16 */
-		/*[ENDIF] JAVA_SPEC_VERSION <= 17 */
+		/*[ENDIF] JAVA_SPEC_VERSION == 17 */
 
 		funcMethodType = functionMethodType;
 		funcDescriptor = functionDescriptor;
@@ -513,15 +404,12 @@ public class InternalDowncallHandler {
 
 		try {
 			/*[IF JAVA_SPEC_VERSION >= 20]*/
-			longObjToMemSegmtRetFilter = lookup.bind(this, "longObjToMemSegmtRet", methodType(MemorySegment.class, Object.class)); //$NON-NLS-1$
-			memSegmtOfPtrToLongArgFilter = lookup.bind(this, "memSegmtOfPtrToLongArg", methodType(long.class, MemorySegment.class)); //$NON-NLS-1$
-			/*[ELSEIF JAVA_SPEC_VERSION >= 18]*/
-			memAddrToLongArgFilter = lookup.bind(this, "memAddrToLongArg", methodType(long.class, Addressable.class)); //$NON-NLS-1$
-			/*[ELSE] JAVA_SPEC_VERSION >= 18 */
-			memAddrToLongArgFilter = lookup.bind(this, "memAddrToLongArg", methodType(long.class, MemoryAddress.class)); //$NON-NLS-1$
+			longObjToMemSegmtRetFilter = lookup.bind(this, "longObjToMemSegmtRet", methodType(MemorySegment.class, Object.class));
+			memSegmtOfPtrToLongArgFilter = lookup.bind(this, "memSegmtOfPtrToLongArg", methodType(long.class, MemorySegment.class));
+			/*[ELSE] JAVA_SPEC_VERSION >= 20 */
+			memAddrToLongArgFilter = lookup.bind(this, "memAddrToLongArg", methodType(long.class, MemoryAddress.class));
 			/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
-
-			memSegmtToLongArgFilter = lookup.bind(this, "memSegmtToLongArg", methodType(long.class, MemorySegment.class)); //$NON-NLS-1$
+			memSegmtToLongArgFilter = lookup.bind(this, "memSegmtToLongArg", methodType(long.class, MemorySegment.class));
 		} catch (ReflectiveOperationException e) {
 			throw new InternalError(e);
 		}
@@ -533,7 +421,7 @@ public class InternalDowncallHandler {
 	private void generateAdapter() {
 		int argLayoutCount = argLayoutArray.length;
 		String[] argLayoutStrs = new String[argLayoutCount];
-		StringBuilder argLayoutStrsLine = new StringBuilder("(|"); //$NON-NLS-1$
+		StringBuilder argLayoutStrsLine = new StringBuilder("(|");
 		for (int argIndex = 0; argIndex < argLayoutCount; argIndex++) {
 			MemoryLayout argLayout = argLayoutArray[argIndex];
 			/* Prefix the size of layout to the layout string to be parsed in native. */
@@ -546,28 +434,22 @@ public class InternalDowncallHandler {
 		 * as the corresponding layout doesn't exist in the Spec.
 		 * Note: 'V' stands for the void type and 0 means zero byte.
 		 */
-		String retLayoutStr = "0V"; //$NON-NLS-1$
+		String retLayoutStr = "0V";
 		if (realReturnLayout != null) {
 			retLayoutStr = LayoutStrPreprocessor.getSimplifiedLayoutString(realReturnLayout, true);
 		}
 
-		synchronized(privateClassLock) {
+		synchronized (privateClassLock) {
 			/* If a prep_cif for a given function descriptor exists, then the corresponding return & argument layouts
 			 * were already set up for this prep_cif, in which case there is no need to check the layouts.
 			 * If not the case, check at first whether the same return & argument layouts exist in the cache
 			 * in case of duplicate memory allocation for the same layouts.
 			 *
-			 * Note: (Java <= 17)
-			 * 1) C_LONG (Linux) and C_LONG_LONG(Windows/AIX 64bit) should be treated as the same layout in the cache.
+			 * Note: (JDK17)
+			 * 1) C_LONG (Linux) and C_LONG_LONG (Windows/AIX 64bit) should be treated as the same layout in the cache.
 			 * 2) the same layout kind with or without the layout name should be treated as the same layout.
 			 * e.g.  C_INT without the layout name = b32[abi/kind=INT]
 			 *  and  C_INT with the layout name = b32(int)[abi/kind=INT,layout/name=int]
-			 * Note: (Java >= 18)
-			 * the signature information are removed from the string of function descriptor since Java 18,
-			 * e.g. (b32[abi/kind=INT],b32[abi/kind=INT])b32[abi/kind=INT] are replaced by ([8%b32, 8%b32])8%b32.
-			 * So we have to unify the code in Java 17 & 18 to parse the layout with different solutions:
-			 * 1) generate the layout string with CLinker.TypeKind in Java 17.
-			 * 2) generate the layout string with MemoryLayout.carrier() (the type idenfied by the layout) in Java 18.
 			 */
 			/*[IF JAVA_SPEC_VERSION >= 20]*/
 			int varArgIdx = LayoutStrPreprocessor.getVarArgIndex(funcDescriptor, linkerOpts);
@@ -609,21 +491,17 @@ public class InternalDowncallHandler {
 		try {
 			/*[IF JAVA_SPEC_VERSION >= 20]*/
 			Class<?> downcallAddrClass = MemorySegment.class;
-			/*[ELSEIF JAVA_SPEC_VERSION == 18]*/
-			Class<?> downcallAddrClass = NativeSymbol.class;
-			/*[ELSE] JAVA_SPEC_VERSION == 18 */
+			/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 			Class<?> downcallAddrClass = Addressable.class;
 			/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 
 			/*[IF JAVA_SPEC_VERSION >= 20]*/
 			MethodType nativeMethodType = methodType(Object.class, downcallAddrClass, SegmentAllocator.class, MemorySegment.class, long[].class);
-			/*[ELSEIF JAVA_SPEC_VERSION >= 17]*/
+			/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 			MethodType nativeMethodType = methodType(Object.class, downcallAddrClass, SegmentAllocator.class, long[].class);
-			/*[ELSE] JAVA_SPEC_VERSION >= 17 */
-			MethodType nativeMethodType = methodType(Object.class, long[].class);
 			/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 
-			MethodHandle boundHandle = lookup.bind(this, "runNativeMethod", nativeMethodType); //$NON-NLS-1$
+			MethodHandle boundHandle = lookup.bind(this, "runNativeMethod", nativeMethodType);
 
 			/* Replace the original handle with the specified types of the C function. */
 			boundHandle = permuteMH(boundHandle, funcMethodType);
@@ -642,11 +520,9 @@ public class InternalDowncallHandler {
 		 * for the execution state to the native function's arguments.
 		 */
 		int argPosition = 3;
-		/*[ELSEIF JAVA_SPEC_VERSION >= 17]*/
+		/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 		/* Skip the native function address and the segment allocator to the native function's arguments. */
 		int argPosition = 2;
-		/*[ELSE] JAVA_SPEC_VERSION >= 17 */
-		int argPosition = 0;
 		/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 		MethodHandle resultHandle = targetHandle.asCollector(argPosition, long[].class, nativeArgCount);
 
@@ -692,15 +568,12 @@ public class InternalDowncallHandler {
 		} else if (argTypeClass == double.class) {
 			filterMH = doubleToLongArgFilter;
 		} else
-		/*[IF JAVA_SPEC_VERSION <= 19]*/
+		/*[IF JAVA_SPEC_VERSION == 17]*/
 		if ((argTypeClass == MemoryAddress.class)
-		/*[IF JAVA_SPEC_VERSION >= 18]*/
-		|| (argTypeClass == Addressable.class)
-		/*[ENDIF] JAVA_SPEC_VERSION >= 18 */
 		) {
 			filterMH = memAddrToLongArgFilter;
 		} else
-		/*[ENDIF] JAVA_SPEC_VERSION <= 19 */
+		/*[ENDIF] JAVA_SPEC_VERSION == 17 */
 		if (argTypeClass == MemorySegment.class) {
 			/*[IF JAVA_SPEC_VERSION >= 20]*/
 			/* The address layout for pointer might come with different representations of ADDRESS. */
@@ -739,15 +612,12 @@ public class InternalDowncallHandler {
 		} else if (returnType == double.class) {
 			filterMH = longObjToDoubleRetFilter;
 		} else
-		/*[IF JAVA_SPEC_VERSION <= 19]*/
+		/*[IF JAVA_SPEC_VERSION == 17]*/
 		if ((returnType == MemoryAddress.class)
-		/*[IF JAVA_SPEC_VERSION >= 18]*/
-		|| (returnType == Addressable.class)
-		/*[ENDIF] JAVA_SPEC_VERSION >= 18 */
 		) {
 			filterMH = longObjToMemAddrRetFilter;
 		} else
-		/*[ENDIF] JAVA_SPEC_VERSION <= 19 */
+		/*[ENDIF] JAVA_SPEC_VERSION == 17 */
 		if (returnType == MemorySegment.class) {
 			/*[IF JAVA_SPEC_VERSION >= 20]*/
 			/* A returned pointer is wrapped as a zero-sized memory segment given all
@@ -766,30 +636,15 @@ public class InternalDowncallHandler {
 		return filterMH;
 	}
 
-	/*[IF JAVA_SPEC_VERSION >= 19]*/
-	/* Set up the dependency from the sessions of memory related arguments to the specified session
-	 * so as to keep these arguments' sessions alive till the specified session is closed.
-	 */
 	/*[IF JAVA_SPEC_VERSION >= 20]*/
+	/* Set up the dependency from the sessions of memory related arguments to the specified session
+	 * so as to keep these arguments' session alive till the specified session is closed.
+	 */
 	private void SetDependency(SegmentScope session)
-	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
-	private void SetDependency(MemorySession session)
-	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 	{
 		Objects.requireNonNull(session);
-		/*[IF JAVA_SPEC_VERSION >= 20]*/
 		for (SegmentScope memArgSession : memArgScopeSet)
-		/*[ELSE] JAVA_SPEC_VERSION >= 20 */
-		for (MemorySession memArgSession : memArgScopeSet)
-		/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 		{
-			/* keepAlive() is replaced with whileAlive(Runnable action) since JDK19 in which case
-			 * the only way to invoke the native in downcall is to wrap it up in another thread
-			 * (for the critical action) rather than the current thread owning the downcall handler,
-			 * which is incorrect in our situation given the downcall must be executed by the owner
-			 * thread according to the API Spec. So we have to directly implement the equivalent of
-			 * keepAlive() in JDK19 to set up the state of arguments' session.
-			 */
 			if (memArgSession.isAlive()) {
 				MemorySessionImpl memArgSessionImpl = (MemorySessionImpl)memArgSession;
 				Thread owner = memArgSessionImpl.ownerThread();
@@ -803,26 +658,10 @@ public class InternalDowncallHandler {
 			}
 		}
 	}
-	/*[ELSEIF JAVA_SPEC_VERSION == 18]*/
-	/* Set up the dependency from the scopes of memory related arguments to the specified scope
-	 * so as to keep these arguments' scopes alive till the specified scope is closed.
+	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
+	/* Occupy the scope by setting the scope's state in downcall so as to keep these
+	 * arguments' scope alive till the specified session is closed.
 	 */
-	private void SetDependency(ResourceScope scope) {
-		Objects.requireNonNull(scope);
-		for (ResourceScope memArgScope : memArgScopeSet) {
-			if (memArgScope.isAlive()) {
-				Thread owner = memArgScope.ownerThread();
-				/* The check is intended for the confined scope or
-				 * the shared scope(e.g. implicit/global scope).
-				 */
-				if ((owner == Thread.currentThread()) || (owner == null)) {
-					scope.keepAlive(memArgScope); // keepAlive() is only used in JDK18
-				}
-			}
-		}
-	}
-	/*[ELSEIF JAVA_SPEC_VERSION == 17]*/
-	/* Occupy the scope by setting the scope's state in downcall which is similiar to keepAlive() in JDK18. */
 	private void acquireScope() {
 		for (ResourceScope memArgScope : memArgScopeSet) {
 			if (memArgScope.isAlive()) {
@@ -838,7 +677,7 @@ public class InternalDowncallHandler {
 		}
 	}
 
-	/* Release the scope with the scope's handle in downcall */
+	/* Release the scope with the scope's handle in downcall. */
 	private void releaseScope() {
 		for (ResourceScope memArgScope : memArgScopeSet) {
 			if (memArgScope.isAlive()) {
@@ -853,31 +692,23 @@ public class InternalDowncallHandler {
 			}
 		}
 	}
-	/*[ENDIF] JAVA_SPEC_VERSION >= 19 */
+	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 
 	/* The method (bound by the method handle to the native code) intends to invoke the C function via the inlined code. */
-	/*[IF JAVA_SPEC_VERSION >= 17]*/
 	/*[IF JAVA_SPEC_VERSION >= 20]*/
 	Object runNativeMethod(MemorySegment downcallAddr, SegmentAllocator segmtAllocator, MemorySegment stateSegmt, long[] args) throws IllegalArgumentException, IllegalStateException
-	/*[ELSEIF JAVA_SPEC_VERSION == 18]*/
-	Object runNativeMethod(NativeSymbol downcallAddr, SegmentAllocator segmtAllocator, long[] args) throws IllegalArgumentException, IllegalStateException
-	/*[ELSE] JAVA_SPEC_VERSION == 18 */
+	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 	Object runNativeMethod(Addressable downcallAddr, SegmentAllocator segmtAllocator, long[] args) throws IllegalArgumentException, IllegalStateException
 	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
-	/*[ELSE] JAVA_SPEC_VERSION >= 17 */
-	Object runNativeMethod(long[] args)
-	/*[ENDIF] JAVA_SPEC_VERSION >= 17 */
 	{
-		/*[IF JAVA_SPEC_VERSION >= 17]*/
 		/*[IF JAVA_SPEC_VERSION >= 20]*/
 		if (downcallAddr == MemorySegment.NULL)
 		/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 		if (downcallAddr.address() == MemoryAddress.NULL)
 		/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 		{
-			throw new IllegalArgumentException("A non-null memory address is expected for downcall"); //$NON-NLS-1$
+			throw new IllegalArgumentException("A non-null memory address is expected for downcall");
 		}
-		/*[ENDIF] JAVA_SPEC_VERSION >= 17 */
 
 		/*[IF JAVA_SPEC_VERSION >= 20]*/
 		/* The scope of the downcall function address needs to be validated in OpenJ9
@@ -894,18 +725,13 @@ public class InternalDowncallHandler {
 		 * JDK20+.
 		 */
 		if ((realReturnLayout != null) && (realReturnLayout instanceof GroupLayout)) {
-			/*[IF JAVA_SPEC_VERSION >= 17]*/
-			/* The segment allocator (introduced since Java 17 to replace NativeScope in Java 16) is confined
-			 * by the memory session(Java19)/resource scope(Java17/18) defined in user applications in which
-			 * case the allocated memory will be released automatically once the session/scope is closed.
+			/* The segment allocator (introduced since Java 17) is confined by the memory session/scope
+			 * defined in the user applications in which case the allocated memory will be released
+			 * automatically once the session/scope is closed.
 			 */
 			retStruSegmt = segmtAllocator.allocate(realReturnLayout);
-			/*[ELSE] JAVA_SPEC_VERSION >= 17 */
-			/* The memory segment will be released explicitly by users via close() in java code in Java 16. */
-			retStruSegmt = MemorySegment.allocateNative(realReturnLayout);
-			/*[ENDIF] JAVA_SPEC_VERSION >= 17 */
 			if (retStruSegmt == null) {
-				throw new OutOfMemoryError("Failed to allocate native memory for the returned memory segment"); //$NON-NLS-1$
+				throw new OutOfMemoryError("Failed to allocate native memory for the returned memory segment");
 			}
 			/*[IF JAVA_SPEC_VERSION >= 20]*/
 			retMemAddr = retStruSegmt.address();
@@ -917,44 +743,21 @@ public class InternalDowncallHandler {
 		long returnVal = 0;
 		/* The session/scope associated with memory specific arguments must be kept alive in downcall since JDK17. */
 		if (!memArgScopeSet.isEmpty()) {
-			/*[IF JAVA_SPEC_VERSION > 17]*/
 			/*[IF JAVA_SPEC_VERSION >= 20]*/
-			try (Arena arena = Arena.openConfined())
-			/*[ELSEIF JAVA_SPEC_VERSION == 19]*/
-			try (MemorySession nativeSession = MemorySession.openConfined())
-			/*[ELSEIF JAVA_SPEC_VERSION == 18]*/
-			try (ResourceScope nativeScope = ResourceScope.newConfinedScope())
-			/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
-			{
-				/*[IF JAVA_SPEC_VERSION >= 20]*/
+			try (Arena arena = Arena.openConfined()) {
 				SetDependency(arena.scope());
-				/*[ELSEIF JAVA_SPEC_VERSION == 19]*/
-				SetDependency(nativeSession);
-				/*[ELSEIF JAVA_SPEC_VERSION == 18]*/
-				SetDependency(nativeScope);
-				/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
-
-				/*[IF JAVA_SPEC_VERSION >= 20]*/
 				returnVal = invokeNative(stateSegmt.address(), retMemAddr, downcallAddr.address(), cifNativeThunkAddr, args);
-				/*[ELSE] JAVA_SPEC_VERSION >= 20 */
-				returnVal = invokeNative(retMemAddr, downcallAddr.address().toRawLongValue(), cifNativeThunkAddr, args);
-				/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 			}
-			/*[ELSE] JAVA_SPEC_VERSION > 17 */
+			/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 			acquireScope();
 			returnVal = invokeNative(retMemAddr, downcallAddr.address().toRawLongValue(), cifNativeThunkAddr, args);
 			releaseScope();
-			/*[ENDIF] JAVA_SPEC_VERSION > 17 */
-		}
-		else
-		{
+			/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
+		} else {
 			/*[IF JAVA_SPEC_VERSION >= 20]*/
 			returnVal = invokeNative(stateSegmt.address(), retMemAddr, downcallAddr.address(), cifNativeThunkAddr, args);
-			/*[ELSEIF JAVA_SPEC_VERSION >= 17]*/
+			/*[ELSE] JAVA_SPEC_VERSION >= 20 */
 			returnVal = invokeNative(retMemAddr, downcallAddr.address().toRawLongValue(), cifNativeThunkAddr, args);
-			/*[ELSE] JAVA_SPEC_VERSION >= 17 */
-			/* The given function address never changes since the initialization of the downcall handler in JDK16. */
-			returnVal = invokeNative(retMemAddr, functionAddr.address().toRawLongValue(), cifNativeThunkAddr, args);
 			/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 		}
 
